--- a/lerna.json
+++ b/lerna.json
@@ -2,13 +2,11 @@
   "packages": [
     "packages/cactus-*"
   ],
-  "version": "fixed",
+  "version": "0.1.0",
   "command": {
     "version": {
-      "message": "chore(release): publish",
-      "allowBranch": [
-        "release/*"
-      ]
+      "message": "chore(release): publish"
     }
-  }
+  },
+  "changelogPreset": "angular"
 }
